--- a/old-docker-compose.yml
+++ b/old-docker-compose.yml
@@ -6,14 +6,14 @@ services:
     ports:
       - "80:80"
     volumes:
-      - ./certbot/webroot:/var/www/certbot
+      - certbot-webroot:/var/www/certbot
     restart: unless-stopped
 
   certbot:
     image: certbot/certbot
     volumes:
-      - ./certbot/webroot:/var/www/certbot
-      - ./certbot/etc:/etc/letsencrypt
+      - certbot-webroot:/var/www/certbot
+      - certbot-etc:/etc/letsencrypt
     command: >
       certonly
       --webroot
@@ -24,3 +24,7 @@ services:
       --non-interactive
     depends_on:
       - web
+
+volumes:
+  certbot-webroot:
+  certbot-etc:
